fix text padding on mobile

--- a/style.css
+++ b/style.css
@@ -204,10 +204,6 @@ body {
 }
 
 @media screen and (max-width: 620px) {
-  html {
-    font-size: 14px;
-  }
-
   .box {
     min-height: 0;
     margin-top: 0;
@@ -218,8 +214,8 @@ body {
   }
 
   .description-item {
-    padding: 1rem;
-    margin: 0 0 0.5rem 0;
+    padding: 0;
+    margin: 0 0 1.5rem 0;
   }
 
   .divider--image {
